<resources>
    <string name="APP_VERSION">3.4.2</string>
    <string name="BASE_URL">https://api.phonepe.com</string>
    <string name="DOCSTORE_URL">https://docstore.phonepe.com/images/</string>
    <string name="INSIGHT_URL">https://business.phonepe.com</string>
    <string name="REFRESH_TOKEN_URL">apis/legion/v1/auth/refresh</string>
    <string name="ROOTED_CHECK">true</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_a_new_bank_account">ADD A NEW BANK ACCOUNT</string>
    <string name="alert_description">Alert</string>
    <string name="allow_permission">"Let's Get Started"</string>
    <string name="and">and</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">PhonePe Ace</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">Back</string>
    <string name="blurred_image_detected">Blurred image detected. Please retake the image.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="build_config_package">com.fos</string>
    <string name="camera_setup_failed">"Couldn't setup camera preview"</string>
    <string name="cancel">Cancel</string>
    <string name="catalyst_change_bundle_location">Change Bundle Location</string>
    <string name="catalyst_copy_button">"Copy
"</string>
    <string name="catalyst_debug_connecting">Connecting to debugger...</string>
    <string name="catalyst_debug_error">Failed to connect to debugger!</string>
    <string name="catalyst_debug_open">Open Debugger</string>
    <string name="catalyst_debug_open_disabled">Connect to the bundler to debug JavaScript</string>
    <string name="catalyst_dev_menu_header">React Native Dev Menu (%1$s)</string>
    <string name="catalyst_dev_menu_sub_header">Running %1$s</string>
    <string name="catalyst_dismiss_button">"Dismiss
(ESC)"</string>
    <string name="catalyst_heap_capture">Capture Heap</string>
    <string name="catalyst_hot_reloading">Enable Fast Refresh</string>
    <string name="catalyst_hot_reloading_auto_disable">Disabling Fast Refresh because it requires a development bundle.</string>
    <string name="catalyst_hot_reloading_auto_enable">Switching to development bundle in order to enable Fast Refresh.</string>
    <string name="catalyst_hot_reloading_stop">Disable Fast Refresh</string>
    <string name="catalyst_inspector_toggle">Toggle Element Inspector</string>
    <string name="catalyst_loading_from_url">Loading from %1$s…</string>
    <string name="catalyst_open_debugger_error">Failed to open debugger. Please check that the dev server is running and reload the app.</string>
    <string name="catalyst_perf_monitor">Show Perf Monitor</string>
    <string name="catalyst_perf_monitor_stop">Hide Perf Monitor</string>
    <string name="catalyst_reload">Reload</string>
    <string name="catalyst_reload_button">"Reload
(R, R)"</string>
    <string name="catalyst_reload_error">Failed to load bundle. Try restarting the bundler or reconnecting your device.</string>
    <string name="catalyst_report_button">Report</string>
    <string name="catalyst_sample_profiler_toggle">Toggle Sampling Profiler</string>
    <string name="catalyst_settings">Settings</string>
    <string name="catalyst_settings_title">Debug Settings</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear">CLEAR</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_image">Click Image</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">65a00279b3b64512ad43b8cdcba92b68</string>
    <string name="combobox_description">Combo Box</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_description">Are you sure you want to discard the current photo and change it?</string>
    <string name="confirm_device_credential_password">Use password</string>
    <string name="confirm_photo_change">Confirm Photo Change</string>
    <string name="confirm_signature">Signature looks incomplete</string>
    <string name="confirm_signature_action">SIGN AGAIN</string>
    <string name="confirm_signature_subtitle">Please sign the same way you have signed in PAN card</string>
    <string name="couldn_t_find_your_organisation_business_name_try_typing_a_few_more_characters_and_search_again">"Couldn't find your organisation/business name? Try typing a few more characters and search again"</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crore">Crore</string>
    <string name="default_error_msg">Unknown error</string>
    <string name="default_notification_channel_description">PhonePe Ace Default Channel</string>
    <string name="default_notification_channel_id">ppe_fos_channel</string>
    <string name="default_notification_channel_name">PhonePe Ace Default</string>
    <string name="default_web_client_id">1058654391385-oj60vdb61gr8m8n18h0pdhha203bg27p.apps.googleusercontent.com</string>
    <string name="det_invalid_date">Invalid date</string>
    <string name="det_invalid_date_max">Invalid Date Max Date</string>
    <string name="det_invalid_date_min">Invalid Date Min Date</string>
    <string name="det_invalid_day">Invalid Day</string>
    <string name="det_invalid_day_of_month">Invalid Day Of Month</string>
    <string name="det_invalid_month">Invalid Month</string>
    <string name="fake_location_header_text">GPS location is not accurate</string>
    <string name="fake_location_sub_text">"Aww, it looks like your GPS location is not correct.
Please check your location!"</string>
    <string name="grant_permission_to_proceed">Allow Permission To Proceed</string>
    <string name="invalid_otp_error">Invalid OTP. Please enter the correct OTP.</string>
    <string name="kyc_signature_capture_subtitle">Make sure that the signature is same as that on the PAN Card</string>
    <string name="kyc_signature_capture_title">Sign in the box below</string>
    <string name="location_error">Location Error</string>
    <string name="mapbox_loading_map">Loading Map…</string>
    <string name="mapbox_retry">Retry</string>
    <string name="mapbox_something_went_wrong_map_loading">Something went wrong, Please try again.</string>
    <string name="permission_denied_allow">Allow Permission</string>
    <string name="refresh">refresh</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="save">Save</string>
    <string name="sign_text">Sign using your finger here</string>
    <string name="skip_otp">Skip OTP</string>
    <string name="skip_otp_notes"><font color="#F7812F"><b>Note: </b></font>You are only allowed to skip the OTP procedure a maximum of twice per day.</string>
    <string name="skip_otp_subtext">"Incase you’re unable to request OTP from the merchant due to their unavailability or any other reason, you request to skip OTP verification.

Please note that all instances of skipping the OTP process will be subject to an audit."</string>
    <string name="skip_otp_title">Unable to request OTP?</string>
    <string name="submit">SUBMIT</string>
    <string name="time_remaining">Time remaining :</string>
    <string name="verify_otp">Verify OTP</string>
</resources>