<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/dialog_fake_location_0" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/dimen_text_20" android:textColor="@android:color/white" android:id="@id/tv_location_error" android:background="@color/colorPrimaryDark" android:padding="@dimen/default_space" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/location_error" android:fontFamily="sans-serif-medium" android:textAlignment="textStart" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <Button android:textSize="@dimen/dimen_text_14" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/btn_refresh" android:background="@color/colorAccent" android:padding="@dimen/default_space" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/refresh" android:textAllCaps="true" android:fontFamily="sans-serif" android:textAlignment="center" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <ImageView android:id="@id/iv_fake_gps" android:layout_width="@dimen/fake_location_image_width" android:layout_height="@dimen/fake_location_image_height" android:layout_margin="@dimen/default_margin_32" android:src="@drawable/wrong_gps" app:layout_constraintBottom_toTopOf="@id/tv_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_location_error" />
    <TextView android:textSize="@dimen/dimen_text_20" android:textStyle="bold" android:textColor="@color/warm_grey" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_32" android:text="@string/fake_location_header_text" android:fontFamily="sans-serif" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_fake_gps" />
    <TextView android:textSize="@dimen/dimen_text_16" android:textColor="@color/warm_grey" android:id="@id/tv_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fake_location_sub_text" android:fontFamily="sans-serif" android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title" />
</androidx.constraintlayout.widget.ConstraintLayout>