<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_ack_hurdle_0" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/startGuideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="@dimen/space_24" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/endGuideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="@dimen/space_24" />
    <TextView android:textSize="@dimen/dimen_text_20" android:textStyle="bold" android:textColor="@color/colorTextPrimary" android:id="@id/tv_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/skip_otp_title" app:layout_constraintEnd_toEndOf="@id/endGuideline" app:layout_constraintStart_toStartOf="@id/startGuideline" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/dimen_text_12" android:textColor="@color/aadhar_grey" android:id="@id/tv_subtext" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_space_16" android:layout_marginBottom="@dimen/default_space_16" android:text="@string/skip_otp_subtext" app:layout_constraintEnd_toEndOf="@id/endGuideline" app:layout_constraintStart_toStartOf="@id/startGuideline" app:layout_constraintTop_toBottomOf="@id/tv_title" />
    <View android:id="@id/notes_indicator" android:background="@drawable/rounded_indicator" android:layout_width="@dimen/notes_indicator_width" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="@id/tv_notes" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/tv_notes" />
    <TextView android:textSize="@dimen/dimen_text_12" android:textColor="@color/colorTextPrimary" android:id="@id/tv_notes" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_space_16" android:text="@string/skip_otp_notes" android:layout_marginStart="@dimen/default_space_16" app:layout_constraintEnd_toEndOf="@id/endGuideline" app:layout_constraintStart_toEndOf="@id/notes_indicator" app:layout_constraintTop_toBottomOf="@id/tv_subtext" />
    <View android:id="@id/text_divider" android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="@dimen/divider_width" android:layout_marginTop="@dimen/default_space_16" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_notes" />
    <TextView android:textSize="@dimen/text_16" android:textStyle="bold" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/tv_back" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="@dimen/button_layout_height" android:text="@string/back" android:textAllCaps="true" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_divider" app:layout_constraintWidth_percent="0.5" />
    <TextView android:textSize="@dimen/text_16" android:textStyle="bold" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/tv_skip_otp" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="@dimen/button_layout_height" android:text="@string/skip_otp" android:textAllCaps="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/text_divider" app:layout_constraintWidth_percent="0.5" />
    <View android:background="@color/divider" android:layout_width="@dimen/divider_width" android:layout_height="@dimen/button_layout_height" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_divider" />
</androidx.constraintlayout.widget.ConstraintLayout>