<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:tag="layout/phonepe_verified_signature_capture_activity_0" android:background="@color/colorWhiteFillPrimary" android:padding="@dimen/space_16" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/cancel_button" android:tag="binding_1" android:layout_width="@dimen/default_margin_24" android:layout_height="@dimen/default_margin_24" app:srcCompat="@drawable/ic_cancel_dark" />
    <TextView android:id="@id/title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/kyc_signature_capture_title" android:layout_marginStart="@dimen/space_16" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/cancel_button" app:layout_constraintTop_toTopOf="@id/cancel_button" style="@style/TitleTextStyle.Medium" />
    <TextView android:id="@id/subtitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_4" android:text="@string/kyc_signature_capture_subtitle" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/title" app:layout_constraintTop_toBottomOf="@id/title" style="@style/SubtitleTextStyle.Small.Light" />
    <com.phonepe.pv.core.ui.customviews.SmoothDrawingView android:id="@id/signature_view" android:background="@drawable/kyc_signature_bg" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="@dimen/default_space_16" android:layout_marginBottom="@dimen/space_16" android:layout_marginEnd="@dimen/default_space_40" app:layout_constraintBottom_toTopOf="@id/save_btn" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/title" app:layout_constraintTop_toBottomOf="@id/subtitle" app:strokeColor="@color/colorTextPrimary" app:strokeWidth="@dimen/space_3" />
    <TextView android:textColor="@color/round_btn_fill_state_text_color" android:id="@id/save_btn" android:tag="binding_2" android:background="@drawable/round_btn_fill_state_bg" android:paddingTop="@dimen/default_space_10" android:paddingBottom="@dimen/default_space_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" android:paddingStart="@dimen/default_space_24" android:paddingEnd="@dimen/default_space_24" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/signature_view" style="@style/TitleTextStyle.Medium" />
    <TextView android:textColor="@color/round_btn_outline_state_text_color" android:id="@id/clear_btn" android:tag="binding_3" android:background="@drawable/round_btn_outline_state_bg" android:paddingTop="@dimen/default_space_10" android:paddingBottom="@dimen/default_space_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/clear" android:paddingStart="@dimen/default_space_24" android:paddingEnd="@dimen/default_space_24" android:layout_marginEnd="@dimen/default_space_16" app:layout_constraintEnd_toStartOf="@id/save_btn" app:layout_constraintTop_toTopOf="@id/save_btn" style="@style/TitleTextStyle.Medium" />
    <com.airbnb.lottie.LottieAnimationView android:id="@id/signature_anim" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/sign_anim_text" app:layout_constraintEnd_toEndOf="@id/signature_view" app:layout_constraintStart_toStartOf="@id/signature_view" app:layout_constraintTop_toTopOf="@id/signature_view" app:layout_constraintVertical_chainStyle="packed" app:lottie_autoPlay="true" app:lottie_loop="true" app:lottie_rawRes="@raw/signature" app:lottie_renderMode="software" />
    <TextView android:gravity="center_horizontal" android:id="@id/sign_anim_text" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_16" android:text="@string/sign_text" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/signature_view" app:layout_constraintStart_toStartOf="@id/signature_view" app:layout_constraintTop_toBottomOf="@id/signature_anim" style="@style/SubtitleTextStyle.Small.Light" />
    <androidx.constraintlayout.widget.Group android:id="@id/helper_text_group" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="signature_anim,sign_anim_text" />
</androidx.constraintlayout.widget.ConstraintLayout>