<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/fragment_otp_hurdle_0" android:background="@drawable/top_rounded_corner_card_style_12dp" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:paddingTop="@dimen/default_space_32" android:paddingBottom="@dimen/default_space_32" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/default_space_16" android:paddingEnd="@dimen/default_space_16">
        <TextView android:textSize="@dimen/pin_text_size" android:textStyle="bold" android:textColor="@color/black" android:ellipsize="end" android:id="@id/tvTitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/verify_otp" android:maxLines="2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/dimen_text_14" android:textColor="@color/colorTextSecondaryDark" android:id="@id/tvSubTitle" android:tag="binding_1" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_space_16" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvTitle" />
        <com.phonepe.hurdleui.view.pin.BoxPinView android:id="@id/et_hurdle" android:tag="binding_2" android:padding="@dimen/default_space_tiny" android:layout_width="fill_parent" android:layout_height="@dimen/wh_50" android:layout_marginLeft="-7.0dip" android:layout_marginTop="@dimen/default_space_16" app:boxWidth="@dimen/wh_40" app:codeHiddenMask="•" app:codeHiddenMode="false" app:enabled="true" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvSubTitle" app:textColor="@color/colorTextPrimary" app:underlineCursorEnabled="true" />
        <TextView android:textSize="@dimen/dimen_text_14" android:textColor="@color/error_message" android:gravity="center_vertical" android:id="@id/tv_error_msg" android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="@dimen/space_24" android:layout_marginTop="@dimen/space_8" android:text="@string/invalid_otp_error" android:drawablePadding="@dimen/space_8" android:drawableStart="@drawable/ic_exclamation" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/et_hurdle" />
        <androidx.constraintlayout.widget.Barrier android:id="@id/barrier_otp" android:layout_width="wrap_content" android:layout_height="wrap_content" app:barrierDirection="bottom" app:constraint_referenced_ids="et_hurdle, tv_error_msg" />
        <androidx.appcompat.widget.AppCompatImageView android:id="@id/iv_resend_otp" android:tag="binding_4" android:visibility="gone" android:layout_width="@dimen/space_24" android:layout_height="@dimen/space_24" android:layout_marginTop="@dimen/default_space_16" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/barrier_otp" app:srcCompat="@drawable/ic_refresh" />
        <TextView android:textSize="@dimen/dimen_text_14" android:textStyle="bold" android:textColor="@color/colorAccent" android:gravity="center_vertical" android:id="@id/tv_resend_otp" android:tag="binding_5" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="@dimen/space_24" android:text="@string/resend_otp" android:textAllCaps="true" android:layout_marginStart="@dimen/space_8" app:layout_constraintStart_toEndOf="@id/iv_resend_otp" app:layout_constraintTop_toTopOf="@id/iv_resend_otp" />
        <TextView android:textSize="@dimen/dimen_text_14" android:textColor="@color/colorTextSecondaryDark" android:gravity="center_vertical" android:id="@id/tv_time_remaining" android:tag="binding_6" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_space_16" android:text="@string/time_remaining" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/barrier_otp" />
        <TextView android:textSize="@dimen/dimen_text_14" android:textColor="@color/status_error" android:gravity="center_vertical" android:id="@id/tv_time_counter" android:tag="binding_7" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/space_8" app:layout_constraintStart_toEndOf="@id/tv_time_remaining" app:layout_constraintTop_toTopOf="@id/tv_time_remaining" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatButton android:textSize="@dimen/text_16" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_submit" android:tag="binding_8" android:background="@drawable/submit_btn_bg" android:layout_width="fill_parent" android:layout_height="@dimen/default_height_max" android:layout_marginTop="@dimen/default_space_32" android:text="@string/submit" android:textAllCaps="true" />
</LinearLayout>