<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/top_rounded_corner_card_style_8dp" android:paddingTop="@dimen/space_16" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/iv_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/space_16" android:layout_marginStart="@dimen/space_16" app:layout_constraintBottom_toTopOf="@id/tv_title" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_cancel" app:tint="@color/colorTextSecondary" />
    <TextView android:textSize="@dimen/dimen_text_20" android:textColor="@color/colorTextPrimary" android:gravity="center" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/default_space_8" android:text="@string/grant_permission_to_proceed" android:layout_marginStart="@dimen/default_margin_24" android:layout_marginEnd="@dimen/default_space_40" app:layout_constraintBottom_toTopOf="@id/message" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_cancel" style="@style/TextAppearanceMedium" />
    <TextView android:textSize="@dimen/dimen_text_14" android:textColor="@color/colorTextSecondary" android:gravity="center" android:id="@id/message" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/default_margin_24" android:layout_marginStart="@dimen/default_margin_24" android:layout_marginEnd="@dimen/default_space_40" app:layout_constraintBottom_toTopOf="@id/tv_sms_permission_request_again" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/TextAppearanceNormal" />
    <TextView android:textSize="@dimen/dimen_text_14" android:id="@id/tv_sms_permission_request_again" android:layout_width="fill_parent" android:layout_height="@dimen/default_space_48" android:layout_marginBottom="@dimen/default_space_24" android:text="@string/permission_denied_allow" android:layout_marginStart="@dimen/default_space_24" android:layout_marginEnd="@dimen/default_space_24" app:layout_constraintBottom_toTopOf="@id/tv_pv_secondary_action_text" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/PhonePeButtonBrandRoundedCorner" />
    <TextView android:textSize="@dimen/dimen_text_14" android:textStyle="bold" android:textColor="?colorAccent" android:gravity="center" android:id="@id/tv_pv_secondary_action_text" android:paddingBottom="@dimen/default_space_24" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_marginStart="@dimen/default_space_24" android:layout_marginEnd="@dimen/default_space_24" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>